--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">First Lab</string>
+    <string name="click_on_here">Click on here!</string>
+    <string name="click">Click!</string>
+    <string name="textview">TextView</string>
+    <string name="Display_message">Display message</string>
+    <string name="welcome_to_api_34">WELCOME TO API 34</string>
+    <string name="display">click here to display a new message</string>
+    <string name="WELCOME_TO_ANDROID_STUDIO" />
+    <string name="welcome">WELCOME TO ANDROID</string>
 </resources>
